# PowerBI-AI-Hub

./: .env.example  .gitignore  DEBUGGING.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: chat.py  mcp_status.py  router.py  sessions.py
backend/app/core/: audit_logger.py  mcp_bridge.py  mcp_client.py  mcp_downloader.py  tool_parser.py
backend/app/llm/: base.py  claude_provider.py  factory.py  openai_provider.py
backend/app/models/: approval.py  chat.py  mcp.py  session.py
backend/app/services/: chat_service.py  mcp_service.py  session_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatWindow.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/components/sidebar/: ConnectionStatus.tsx  ModeToggle.tsx  ProviderSelector.tsx  SessionList.tsx
frontend/src/components/tools/: ToolCallCard.tsx
frontend/src/services/: api.ts  ws.ts
frontend/src/store/: index.ts
frontend/src/types/: chat.ts  index.ts
